--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#ffffff</color>
     <color name="buttonDefault">#00acc1</color>
+    <color name="darkGreen">#618057</color>
     <color name="orange">#ff4d00</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
