--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -27,6 +27,15 @@
         <item name="android:gravity">center</item>
     </style>
 
+    <style name="TextViewDataTableParentLight" parent="@android:style/Widget.TextView">
+        <item name="android:textColor">@color/darkGreen</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingStart">8dip</item>
+        <item name="android:paddingEnd">8dip</item>
+        <item name="android:gravity">center</item>
+    </style>
+
     <style name="TextViewDataTableChild" parent="@android:style/Widget.TextView">
         <item name="android:textColor">@color/colorPrimaryDark</item>
         <item name="android:layout_width">wrap_content</item>
