--- a/android/app/src/main/res/layout/fragment_info_view.xml
+++ b/android/app/src/main/res/layout/fragment_info_view.xml
@@ -14,24 +14,14 @@
         android:minHeight="?attr/actionBarSize"
         android:weightSum="1">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:orientation="horizontal"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp">
-
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:background="#00000000"
-                android:id="@+id/back_button_info_view"
-                android:clickable="true"
-                android:scaleType="center"
-                android:src="@drawable/arrow_white"
-                android:padding="16dp" />
-
-        </LinearLayout>
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="#00000000"
+            android:id="@+id/back_button_info_view"
+            android:clickable="true"
+            android:scaleType="center"
+            android:src="@drawable/arrow_white"/>
 
     </android.support.v7.widget.Toolbar>
 
