--- a/android/app/src/main/res/layout/fragment_permit_data_view.xml
+++ b/android/app/src/main/res/layout/fragment_permit_data_view.xml
@@ -49,16 +49,16 @@
             android:layout_marginBottom="8dp"
             android:stretchColumns="1,2">
             <TableRow
-                android:id="@+id/permit_table_type_row"
+                android:id="@+id/permit_table_effluent_type_row"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
                     style="@style/TextViewDataTableParent"
-                    android:gravity="end"
-                    android:text="@string/permit_table_type"/>
+                    android:gravity="start"
+                    android:text="@string/permit_table_effluent_type"/>
                 <TextView
                     style="@style/TextViewDataTableChild"
-                    android:id="@+id/permit_table_type"
+                    android:id="@+id/permit_table_effluent_type"
                     android:gravity="start"
                     android:ellipsize="end"
                     android:maxLines="4"
@@ -67,16 +67,34 @@
             </TableRow>
 
             <TableRow
-                android:id="@+id/permit_table_date_row"
+                android:id="@+id/permit_table_site_type_row"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
                     style="@style/TextViewDataTableParent"
-                    android:gravity="end"
-                    android:text="@string/permit_table_date"/>
+                    android:gravity="start"
+                    android:text="@string/permit_table_site_type"/>
                 <TextView
                     style="@style/TextViewDataTableChild"
-                    android:id="@+id/permit_table_date"
+                    android:id="@+id/permit_table_site_type"
+                    android:gravity="start"
+                    android:ellipsize="end"
+                    android:maxLines="4"
+                    android:layout_weight="1"
+                    android:text=""/>
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/permit_table_effective_date_row"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    style="@style/TextViewDataTableParent"
+                    android:gravity="start"
+                    android:text="@string/permit_table_effective_date"/>
+                <TextView
+                    style="@style/TextViewDataTableChild"
+                    android:id="@+id/permit_table_effective_date"
                     android:gravity="start"
                     android:text=""/>
             </TableRow>
