--- a/android/app/src/main/res/layout/fragment_info_view.xml
+++ b/android/app/src/main/res/layout/fragment_info_view.xml
@@ -8,20 +8,15 @@
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FF000000"
+        android:background="@color/colorPrimaryDark"
         android:theme="?attr/actionBarTheme"
         android:id="@+id/infoview_toolbar"
         android:minHeight="?attr/actionBarSize"
         android:weightSum="1">
 
         <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:background="#00000000"
-            android:id="@+id/back_button_info_view"
-            android:clickable="true"
-            android:scaleType="center"
-            android:src="@drawable/arrow_white"/>
+            style="@style/back_button"
+            android:id="@+id/back_button_info_view"/>
 
     </android.support.v7.widget.Toolbar>
 
