--- a/android/app/src/main/res/layout/fragment_permit_data_view.xml
+++ b/android/app/src/main/res/layout/fragment_permit_data_view.xml
@@ -1,25 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent" >
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
 
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#000000"
+        android:background="@color/colorPrimaryDark"
         android:theme="?attr/actionBarTheme"
         android:id="@+id/permit_toolbar"
         android:minHeight="?attr/actionBarSize">
 
         <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:background="#00000000"
-            android:id="@+id/back_button_permit_data_view"
-            android:clickable="true"
-            android:scaleType="center"
-            android:src="@drawable/arrow_white" />
+            style="@style/back_button"
+            android:id="@+id/back_button_permit_data_view"/>
 
     </android.support.v7.widget.Toolbar>
 
@@ -31,38 +27,26 @@
     android:background="@color/backgroundDefault">
 
         <TextView
-        android:text=""
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/permit_holder_name"
-        android:textSize="18sp"
-        android:textColor="@color/colorPrimaryDark"
-        android:textAlignment="center"
-        android:layout_marginTop="10dp" />
+            style="@style/text_view_heading"
+            android:id="@+id/permit_holder_name"
+            android:text=""/>
 
         <TableLayout
-            style="@style/TextViewDataTableParent"
+            style="@style/table_layout"
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/permit_table"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="8dp"
             android:stretchColumns="1,2">
             <TableRow
                 android:id="@+id/permit_table_effluent_type_row"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
-                    style="@style/TextViewDataTableParent"
+                    style="@style/text_view_table_parent"
                     android:gravity="start"
                     android:text="@string/permit_table_effluent_type"/>
                 <TextView
-                    style="@style/TextViewDataTableChild"
+                    style="@style/text_view_table_child"
                     android:id="@+id/permit_table_effluent_type"
-                    android:gravity="start"
-                    android:ellipsize="end"
-                    android:maxLines="4"
-                    android:layout_weight="1"
                     android:text=""/>
             </TableRow>
 
@@ -71,16 +55,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
-                    style="@style/TextViewDataTableParent"
+                    style="@style/text_view_table_parent"
                     android:gravity="start"
                     android:text="@string/permit_table_site_type"/>
                 <TextView
-                    style="@style/TextViewDataTableChild"
+                    style="@style/text_view_table_child"
                     android:id="@+id/permit_table_site_type"
-                    android:gravity="start"
-                    android:ellipsize="end"
-                    android:maxLines="4"
-                    android:layout_weight="1"
                     android:text=""/>
             </TableRow>
 
@@ -89,13 +69,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
-                    style="@style/TextViewDataTableParent"
+                    style="@style/text_view_table_parent"
                     android:gravity="start"
                     android:text="@string/permit_table_effective_date"/>
                 <TextView
-                    style="@style/TextViewDataTableChild"
+                    style="@style/text_view_table_child"
                     android:id="@+id/permit_table_effective_date"
-                    android:gravity="start"
                     android:text=""/>
             </TableRow>
         </TableLayout>
@@ -104,7 +83,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/permit_grid_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:background="#AA000000"
         android:layout_weight="0.30" />
 
