--- a/android/app/src/main/res/layout/fragment_wims_data_view.xml
+++ b/android/app/src/main/res/layout/fragment_wims_data_view.xml
@@ -7,34 +7,18 @@
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#000000"
+        android:background="@color/colorPrimaryDark"
         android:theme="?attr/actionBarTheme"
         android:id="@+id/wims_data_toolbar"
         android:minHeight="?attr/actionBarSize">
 
         <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:background="#00000000"
-            android:id="@+id/back_button_wims_data_view"
-            android:clickable="true"
-            android:scaleType="center"
-            android:src="@drawable/arrow_white" />
+            style="@style/back_button"
+            android:id="@+id/back_button_wims_data_view"/>
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:background="#00000000"
-            android:id="@+id/info_button_wims_data_view"
-            android:clickable="true"
-            android:scaleType="center"
-            android:layout_gravity="end"
-            android:padding="16dp"
-            android:text="@string/cde_info_button"
-            android:textAllCaps="false"
-            android:textAlignment="textEnd"
-            android:drawablePadding="5dp"
-            android:drawableStart="@drawable/info_white" />
+            style="@style/info_button"
+            android:id="@+id/info_button_wims_data_view"/>
 
     </android.support.v7.widget.Toolbar>
 
@@ -43,39 +27,17 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:clickable="true"
-        android:background="#4fc3f7">
+        android:background="@color/backgroundDefault">
 
         <TextView
-            android:text=""
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            style="@style/text_view_heading"
             android:id="@+id/wims_name"
-            android:textSize="18sp"
-            android:textColor="@color/colorPrimaryDark"
-            android:textAlignment="center"
-            android:layout_marginTop="10dp"/>
-
-        <!--<TextView-->
-            <!--android:text=""-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:clickable="true"-->
-            <!--android:id="@+id/wims_type"-->
-            <!--android:textSize="14sp"-->
-            <!--android:textColor="@color/black"-->
-            <!--android:layout_gravity="start"-->
-            <!--android:layout_marginTop="4dp"-->
-            <!--android:layout_marginLeft="16dp"-->
-            <!--android:layout_marginRight="16dp" />-->
+            android:text=""/>
 
         <TableLayout
-            style="@style/TextViewDataTableParent"
+            style="@style/table_layout"
             xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/wims_table"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="8dp">
-
+            android:id="@+id/wims_table">
         </TableLayout>
 
     </LinearLayout>
@@ -83,7 +45,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/wims_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:background="#AA000000"
         android:layout_weight="0.30" />
 
