--- a/android/app/src/main/res/layout/fragment_wims_details_view.xml
+++ b/android/app/src/main/res/layout/fragment_wims_details_view.xml
@@ -8,21 +8,15 @@
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#000000"
+        android:background="@color/colorPrimaryDark"
         android:theme="?attr/actionBarTheme"
         android:id="@+id/wims_details_toolbar"
         android:minHeight="?attr/actionBarSize"
         android:weightSum="1">
 
         <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:background="#00000000"
-            android:id="@+id/back_button_wims_details_view"
-            android:clickable="true"
-            android:scaleType="center"
-            android:src="@drawable/arrow_white"/>
-
+            style="@style/back_button"
+            android:id="@+id/back_button_wims_details_view"/>
 
     </android.support.v7.widget.Toolbar>
 
@@ -32,7 +26,7 @@
         android:fillViewport="true">
 
         <LinearLayout
-            android:id = "@+id/cde_details_linear_layout"
+            android:id="@+id/cde_details_linear_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/backgroundDefault"
@@ -40,154 +34,85 @@
             android:weightSum="1">
 
             <TextView
+                style="@style/text_view_heading"
                 android:id="@+id/wims_details_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:gravity="center"
-                android:text=""
-                android:textColor="@color/black"
-                android:textSize="18sp" />
+                android:text=""/>
 
             <TextView
+                style="@style/text_view_sub_heading"
                 android:id="@+id/wims_details_general_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:layout_marginTop="8dp"
-                android:gravity="center"
-                android:text="@string/wims_details_general_title"
-                android:textColor="@color/black"
-                android:textSize="16sp" />
+                android:text="@string/wims_details_general_title"/>
 
             <TableLayout
-                style="@style/TextViewDataTableParent"
+                style="@style/table_layout"
                 xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/wims_details_general_table"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="top">
+                android:id="@+id/wims_details_general_table">
             </TableLayout>
 
             <TextView
+                style="@style/text_view_sub_heading"
                 android:id="@+id/wims_details_diss_oxygen_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:layout_marginTop="8dp"
-                android:gravity="center"
-                android:text="@string/wims_details_diss_oxygen_title"
-                android:textColor="@color/black"
-                android:textSize="16sp" />
+                android:text="@string/wims_details_diss_oxygen_title"/>
 
             <TableLayout
-                style="@style/TextViewDataTableParent"
+                style="@style/table_layout"
                 xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/wims_details_diss_oxygen_table"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="top">
+                android:id="@+id/wims_details_diss_oxygen_table">
             </TableLayout>
 
             <TextView
+                style="@style/text_view_sub_heading"
                 android:id="@+id/wims_details_oxygen_demand_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:layout_marginTop="8dp"
-                android:gravity="center"
-                android:text="@string/wims_details_oxygen_demand_title"
-                android:textColor="@color/black"
-                android:textSize="16sp" />
+                android:text="@string/wims_details_oxygen_demand_title"/>
 
             <TableLayout
-                style="@style/TextViewDataTableParent"
+                style="@style/table_layout"
                 xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/wims_details_oxygen_demand_table"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="top">
+                android:id="@+id/wims_details_oxygen_demand_table">
             </TableLayout>
 
             <TextView
+                style="@style/text_view_sub_heading"
                 android:id="@+id/wims_details_nitrates_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:layout_marginTop="8dp"
-                android:gravity="center"
-                android:text="@string/wims_details_nitrates_title"
-                android:textColor="@color/black"
-                android:textSize="16sp" />
+                android:text="@string/wims_details_nitrates_title"/>
 
             <TableLayout
-                style="@style/TextViewDataTableParent"
+                style="@style/table_layout"
                 xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/wims_details_nitrates_table"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="top">
+                android:id="@+id/wims_details_nitrates_table">
             </TableLayout>
 
             <TextView
+                style="@style/text_view_sub_heading"
                 android:id="@+id/wims_details_phosphates_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:layout_marginTop="8dp"
-                android:gravity="center"
-                android:text="@string/wims_details_phosphates_title"
-                android:textColor="@color/black"
-                android:textSize="16sp" />
+                android:text="@string/wims_details_phosphates_title"/>
 
             <TableLayout
-                style="@style/TextViewDataTableParent"
+                style="@style/table_layout"
                 xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/wims_details_phosphates_table"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="top">
+                android:id="@+id/wims_details_phosphates_table">
             </TableLayout>
 
             <TextView
+                style="@style/text_view_sub_heading"
                 android:id="@+id/wims_details_metals_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:layout_marginTop="8dp"
-                android:gravity="center"
-                android:text="@string/wims_details_metals_title"
-                android:textColor="@color/black"
-                android:textSize="16sp" />
+                android:text="@string/wims_details_metals_title"/>
 
             <TableLayout
-                style="@style/TextViewDataTableParent"
+                style="@style/table_layout"
                 xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/wims_details_metals_table"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="top">
+                android:id="@+id/wims_details_metals_table">
             </TableLayout>
 
             <TextView
+                style="@style/text_view_sub_heading"
                 android:id="@+id/wims_details_solids_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:layout_marginTop="8dp"
-                android:gravity="center"
-                android:text="@string/wims_details_solids_title"
-                android:textColor="@color/black"
-                android:textSize="16sp" />
+                android:text="@string/wims_details_solids_title"/>
 
             <TableLayout
-                style="@style/TextViewDataTableParent"
+                style="@style/table_layout"
                 xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/wims_details_solids_table"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:gravity="top">
+                android:id="@+id/wims_details_solids_table">
             </TableLayout>
 
         </LinearLayout>
