--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#4caf50</color>
+    <color name="colorPrimaryDark">#087f23</color>
+    <color name="colorPrimaryLight">#80e27e</color>
+
+    <color name="colorSecondary">#29b6f6</color>
+    <color name="colorSecondaryDark">#0086c3</color>
+    <color name="colorSecondaryLight">#73e8ff</color>
+
     <color name="colorAccent">#ffffff</color>
+
     <color name="buttonDefault">#00acc1</color>
     <color name="darkGreen">#618057</color>
     <color name="orange">#ff4d00</color>
@@ -11,7 +18,7 @@
     <color name="grey">#222222</color>
     <color name="darkGrey">#ff444444</color>
     <color name="darkGreyTransparent">#dd444444</color>
-    <color name="backgroundDefault">#4fc3f7</color>
+    <color name="backgroundDefault">#73e8ff</color>
     <color name="backgroundTransparent">#cc4fc3f7</color>
     <color name="layer_wims">#C6CB7D</color>
     <color name="layer_cde">#00C292</color>
