--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#4caf50</color>
-    <color name="colorPrimaryDark">#087f23</color>
-    <color name="colorPrimaryLight">#80e27e</color>
+    <color name="colorPrimary">#2196F3</color>
+    <color name="colorPrimaryDark">#1976D2</color>
+    <color name="colorPrimaryLight">#BBDEFB</color>
 
-    <color name="colorSecondary">#29b6f6</color>
-    <color name="colorSecondaryDark">#0086c3</color>
-    <color name="colorSecondaryLight">#73e8ff</color>
+    <color name="colorSecondary">#a5d6a7</color>
+    <color name="colorSecondaryDark">#d7ffd9</color>
+    <color name="colorSecondaryLight">#75a478</color>
 
-    <color name="colorAccent">#ffffff</color>
+    <color name="colorAccent">#a5d6a7</color>
+
+    <color name="colorTextPrimary">#212121</color>
+    <color name="colorTextSecondary">#757575</color>
 
     <color name="buttonDefault">#00acc1</color>
     <color name="darkGreen">#618057</color>
@@ -18,8 +21,8 @@
     <color name="grey">#222222</color>
     <color name="darkGrey">#ff444444</color>
     <color name="darkGreyTransparent">#dd444444</color>
-    <color name="backgroundDefault">#73e8ff</color>
-    <color name="backgroundTransparent">#cc4fc3f7</color>
+    <color name="backgroundDefault">#BBDEFB</color>
+    <color name="backgroundTransparent">#ccF0F4C3</color>
     <color name="layer_wims">#C6CB7D</color>
     <color name="layer_cde">#00C292</color>
     <color name="layer_permit">#CCDDE5</color>
