--- a/android/app/src/main/res/layout/activity_data_view.xml
+++ b/android/app/src/main/res/layout/activity_data_view.xml
@@ -27,7 +27,8 @@
         android:layout_height="50dp"
         android:layout_marginTop="0dp"
         android:layout_marginStart="0dp"
-        android:src="@drawable/ic_menu_white"/>
+        android:src="@drawable/ic_menu_white"
+        android:backgroundTint="@color/darkGreyTransparent"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/gps_button"
