--- a/android/app/src/main/res/layout/fragment_info_view.xml
+++ b/android/app/src/main/res/layout/fragment_info_view.xml
@@ -6,13 +6,8 @@
     android:clickable="true" >
 
     <android.support.v7.widget.Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
-        android:theme="?attr/actionBarTheme"
-        android:id="@+id/infoview_toolbar"
-        android:minHeight="?attr/actionBarSize"
-        android:weightSum="1">
+        style="@style/toolbar_default"
+        android:id="@+id/infoview_toolbar">
 
         <ImageButton
             style="@style/back_button"
@@ -78,7 +73,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/info_home_buttons"
                     android:layout_marginTop="8dp"
-                    android:layout_marginStart="33dp" />
+                    android:layout_marginStart="25dp" />
 
             </LinearLayout>
 
@@ -116,35 +111,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal" >
 
-                <ImageView
-                    android:id="@+id/info_camButton"
-                    android:gravity="start"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.80"
-                    android:src="@drawable/photo_icon"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginLeft="16dp"/>
-
-                <TextView
-                    android:id="@+id/info_camText"
-                    android:textColor="@color/black"
-                    android:textSize="14sp"
-                    android:gravity="start"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.20"
-                    android:text="@string/info_camText"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginRight="8dp"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal" >
-
                 <TextView
                     android:id="@+id/info_layers"
                     android:textColor="@color/black"
@@ -154,7 +120,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/info_layers"
                     android:layout_marginTop="12dp"
-                    android:layout_marginStart="33dp" />
+                    android:layout_marginStart="25dp" />
 
             </LinearLayout>
 
@@ -167,7 +133,7 @@
                     android:id="@+id/info_cde_layer"
                     android:gravity="start"
                     android:layout_width="match_parent"
-                    android:layout_height="30dp"
+                    android:layout_height="40dp"
                     android:layout_weight="0.80"
                     android:src="@drawable/ic_cde_marker"
                     android:layout_marginTop="12dp"
@@ -196,7 +162,7 @@
                     android:id="@+id/info_wims_layer"
                     android:gravity="start"
                     android:layout_width="match_parent"
-                    android:layout_height="30dp"
+                    android:layout_height="40dp"
                     android:layout_weight="0.80"
                     android:src="@drawable/ic_wims_marker"
                     android:layout_marginTop="8dp"
@@ -225,9 +191,9 @@
                     android:id="@+id/info_image_layer"
                     android:gravity="start"
                     android:layout_width="match_parent"
-                    android:layout_height="30dp"
+                    android:layout_height="40dp"
                     android:layout_weight="0.80"
-                    android:src="@drawable/ic_photo_marker"
+                    android:src="@drawable/ic_permit_marker"
                     android:layout_marginTop="8dp"
                     android:layout_marginStart="16dp"/>
 
@@ -239,7 +205,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.20"
-                    android:text="@string/info_image_description"
+                    android:text="@string/info_permit_description"
                     android:layout_marginTop="8dp"
                     android:layout_marginRight="16dp"
                     android:layout_marginBottom="16dp"/>
