--- a/android/app/src/main/res/layout/fragment_permit_data_view.xml
+++ b/android/app/src/main/res/layout/fragment_permit_data_view.xml
@@ -6,12 +6,8 @@
     android:layout_height="match_parent" >
 
     <android.support.v7.widget.Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
-        android:theme="?attr/actionBarTheme"
-        android:id="@+id/permit_toolbar"
-        android:minHeight="?attr/actionBarSize">
+        style="@style/toolbar_default"
+        android:id="@+id/permit_toolbar">
 
         <ImageButton
             style="@style/back_button"
