--- a/android/app/src/main/res/values-v21/styles.xml
+++ b/android/app/src/main/res/values-v21/styles.xml
@@ -13,13 +13,20 @@
         <item name="android:textColorPrimary">@color/black</item>
     </style>
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat">
         <!-- Customize your theme here. -->
+        <item name="android:textColorPrimary">@color/colorTextPrimary</item>
+        <item name="android:textColorPrimaryInverse">@color/colorTextPrimary</item>
+        <item name="android:statusBarColor">@android:color/holo_blue_bright</item>
+        <item name="android:colorPrimary">@color/colorPrimary</item>
+        <item name="android:colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="android:colorAccent">@color/colorAccent</item>
+        <item name="android:colorBackground">@color/darkGrey</item>
+        <item name="android:navigationBarColor">@color/darkGrey</item>
+        <item name="android:textColorSecondary">@color/colorSecondary</item>
+        <item name="android:windowBackground">@color/darkGrey</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:textColorPrimary">@color/black</item>
-        <item name="android:textColorPrimaryInverse">@color/colorAccent</item>
-        <item name="android:statusBarColor">@color/primary_dark</item>
+        <item name="colorAccent">@color/colorSecondary</item>
     </style>
 </resources>
