--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2196F3</color>
-    <color name="colorPrimaryDark">#1976D2</color>
+    <color name="colorPrimary">#2196f3</color>
+    <color name="colorPrimaryDark">#1976d2</color>
+    <color name="colorPrimaryDarkDark">#0663bc</color>
     <color name="colorPrimaryLight">#BBDEFB</color>
 
     <color name="colorSecondary">#a5d6a7</color>
@@ -10,8 +11,8 @@
 
     <color name="colorAccent">#a5d6a7</color>
 
-    <color name="colorTextPrimary">#212121</color>
-    <color name="colorTextSecondary">#757575</color>
+    <color name="colorTextPrimary">#FFFFFF</color>
+    <color name="colorTextSecondary">#212121</color>
 
     <color name="buttonDefault">#00acc1</color>
     <color name="darkGreen">#618057</color>
