--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,13 +1,17 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:textColorPrimary">@color/colorTextPrimary</item>
-        <item name="android:textColorPrimaryInverse">@color/colorTextSecondary</item>
+        <item name="android:textColorPrimaryInverse">@color/colorTextPrimary</item>
+        <item name="android:colorBackground">@color/darkGrey</item>
+        <item name="android:textColorSecondary">@color/colorSecondary</item>
+        <item name="android:windowBackground">@color/darkGrey</item>
+        <item name="android:statusBarColor"></item>
     </style>
 
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
@@ -25,7 +29,7 @@
         <item name="android:background">#00000000</item>
         <item name="android:clickable">true</item>
         <item name="android:scaleType">center</item>
-        <item name="android:src">@drawable/arrow_black</item>
+        <item name="android:src">@drawable/arrow_white</item>
         <item name="android:contentDescription">@string/back_button</item>
     </style>
 
@@ -40,10 +44,10 @@
         <item name="android:paddingEnd">16dp</item>
         <item name="android:text">@string/info_button</item>
         <item name="android:textSize">15sp</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/colorTextPrimary</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textAlignment">textEnd</item>
-        <item name="android:drawableStart">@drawable/info_black</item>
+        <item name="android:drawableStart">@drawable/info_white</item>
     </style>
 
     <style name="text_view_heading" parent="@android:style/Widget.TextView">
@@ -73,6 +77,14 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_margin">10dp</item>
         <item name="android:gravity">top</item>
+    </style>
+
+    <style name="toolbar_default">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:theme">?attr/actionBarTheme</item>
+        <item name="android:minHeight">?attr/actionBarSize</item>
     </style>
 
     <style name="text_view_table_parent" parent="@android:style/Widget.TextView">
